--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pomelo-rpc",
 	"version": "0.4.5",
-    "private": true,
+    "private": false,
     "repository": {
         "type": "git",
         "url": "git+ssh://git@git.marstv.com/git/backend/pomelo-rpc.git"
